crates/elif-http-derive/tests/ui/fail/controller_on_enum.stderr
error: controller attribute must be applied to an impl block or struct. Hint: Use `#[controller("/path")] impl MyController { ... }` or `#[controller("/path")] struct MyController;`
 --> tests/ui/fail/controller_on_enum.rs:6:1
  |
6 | #[controller("/api")]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `controller` (in Nightly builds, run with -Z macro-backtrace for more info)
